// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fixtures output match: define-messages 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.MyComponent = void 0;

var _react = require(\\"react\\");

var _react2 = require(\\"@lingui/react\\");

var MyComponent = function MyComponent() {
  var messages = {
    hello: {
      id: \\"Hello\\",
      defaultMessage: \\"Hello\\"
    },
    'hey.you': {
      id: \\"Hello, You\\",
      defaultMessage: \\"Hey, You!\\"
    }
  };
  return (/*#__PURE__*/_react.React.createElement(_react.React.Fragment, null, /*#__PURE__*/_react.React.createElement(_react2.Trans, {
      id: \\"Hello\\",
      defaults: \\"Hello\\"
    }), /*#__PURE__*/_react.React.createElement(_react2.Trans, {
      id: \\"Hello, You\\",
      defaults: \\"Hey, You!\\"
    }))
  );
};

exports.MyComponent = MyComponent;"
`;

exports[`fixtures output match: define-messages 2`] = `
Object {
  "Hello": Object {
    "defaults": "Hello",
    "origin": Array [
      Array [
        "test/fixtures/define-messages/actual.js",
        18,
      ],
    ],
  },
  "Hello, You": Object {
    "defaults": "Hey, You!",
    "origin": Array [
      Array [
        "test/fixtures/define-messages/actual.js",
        19,
      ],
    ],
  },
}
`;

exports[`fixtures output match: mixed-react-intl-trans 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.MyComponent = void 0;

var _react = require(\\"react\\");

var _react2 = require(\\"@lingui/react\\");

var MyComponent = function MyComponent() {
  return (/*#__PURE__*/_react.React.createElement(_react.React.Fragment, null, /*#__PURE__*/_react.React.createElement(_react2.Trans, {
      id: \\"Hello\\",
      defaults: \\"Hello\\"
    }), /*#__PURE__*/_react.React.createElement(_react2.Trans, {
      id: \\"app.name\\",
      defaults: \\"You\\"
    }))
  );
};

exports.MyComponent = MyComponent;"
`;

exports[`fixtures output match: mixed-react-intl-trans 2`] = `
Object {
  "Hello": Object {
    "defaults": "Hello",
    "origin": Array [
      Array [
        "test/fixtures/mixed-react-intl-trans/actual.js",
        8,
      ],
    ],
  },
  "app.name": Object {
    "defaults": "You",
    "origin": Array [
      Array [
        "test/fixtures/mixed-react-intl-trans/actual.js",
        9,
      ],
    ],
  },
}
`;

exports[`fixtures output match: only-formatted-message 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.MyComponent = void 0;

var _react = require(\\"react\\");

var _react2 = require(\\"@lingui/react\\");

var MyComponent = function MyComponent() {
  return (/*#__PURE__*/_react.React.createElement(_react.React.Fragment, null, /*#__PURE__*/_react.React.createElement(_react2.Trans, {
      id: \\"Hello {name}\\",
      defaults: \\"Hello {name}\\",
      values: {
        name: 'Hao'
      }
    }), /*#__PURE__*/_react.React.createElement(_react2.Trans, {
      id: \\"Online\\",
      defaults: \\"Online\\"
    }))
  );
};

exports.MyComponent = MyComponent;"
`;

exports[`fixtures output match: only-formatted-message 2`] = `
Object {
  "Hello {name}": Object {
    "defaults": "Hello {name}",
    "origin": Array [
      Array [
        "test/fixtures/only-formatted-message/actual.js",
        7,
      ],
    ],
  },
  "Online": Object {
    "defaults": "Online",
    "origin": Array [
      Array [
        "test/fixtures/only-formatted-message/actual.js",
        14,
      ],
    ],
  },
}
`;

exports[`fixtures output match: only-trans 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.MyComponent = void 0;

var _react = require(\\"react\\");

var _react2 = require(\\"@lingui/react\\");

var MyComponent = function MyComponent() {
  return (/*#__PURE__*/_react.React.createElement(_react2.Trans, {
      id: \\"Hello\\",
      defaults: \\"Hello\\"
    })
  );
};

exports.MyComponent = MyComponent;"
`;

exports[`fixtures output match: only-trans 2`] = `
Object {
  "Hello": Object {
    "defaults": "Hello",
    "origin": Array [
      Array [
        "test/fixtures/only-trans/actual.js",
        6,
      ],
    ],
  },
}
`;
